<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.akc.registrousuario.UsuarioDetalle" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_marginTop="10dip" >
    </TableRow>

    <TableRow android:id="@+id/tableRow2">
        <ImageView
			    android:id="@+id/imagenPersonaDet"
			    android:layout_width="107dp"
			    android:layout_height="107dp" />
    </TableRow>
    
    <TableRow android:id="@+id/tableRow3" >

        <TextView
            android:id="@+id/lblUserDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/nombreUsuario"
            android:textColor="#000" />

        <EditText
            android:id="@+id/txtUserDet"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>

    <TableRow android:id="@+id/tableRow4" >

        <TextView
            android:id="@+id/lblListFechaNacDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/fechaNacimiento"
            android:textColor="#000" 
            android:hint="@string/formatoFecha"
            />

        <EditText
            android:id="@+id/txtFechaNacDet"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>

    <TableRow android:id="@+id/tableRow5" >

        <TextView
            android:id="@+id/lblPaisDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/cmbpais"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/spnpaisesDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dip"
            android:layout_weight="1" />
    </TableRow>

    <TableRow android:id="@+id/tableRow6" >

        <TextView
            android:id="@+id/lblSexoDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/rdisexo"
            android:textColor="#000" />

        <RadioGroup
            android:id="@+id/rgrsexoDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radMasculinoDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdimasculino"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dip"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radFemeninoDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdifemenino"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dip"
                android:layout_weight="1" />

        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblInglesDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkingles"
            android:textColor="#000"
            android:layout_marginLeft="5dip" />

        <CheckBox
            android:id="@+id/chIdiomaDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:text="@string/si" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow8" >

        <Button
            android:id="@+id/btnRegistroDet"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/btnVerRegDet"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVerReg" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnNuevoDet"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRegistro" />

    </TableRow>
    
</TableLayout>
